# pluralize-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
pluralize_derive/: Cargo.toml
pluralize_derive/src/: lib.rs
src/: iter.rs  jank.rs  lib.rs  macro.rs
tests/: test.rs
