[package]
name = "pluralize"
description = "A generic trait across single and multiple elements"
version = "0.2.0"
authors = ["Brady McDonough <brady.mcd.codes@gmail.com>"]
repository = "https://github.com/bradymcd/pluralize-rs.git"
edition = "2018"

readme = "README.md"
license = "MIT"

keywords = ["primitive", "generic"]
categories = ["rust-patterns"]

[dependencies]
cfg-if = "0.1.10"

[dev-dependencies]

[features]
# Enables implementation of the Pluralize type over Option<T>. Not likely portable
Options = []
# Enables implementation of the Remover iterator over Pluralize<T>. Not likely portable
Remover = []