[package]
name = "pluralize_derive"
description = "A macro to derive primitive Pluralize implementations"
version = "0.1.1"
authors = ["Brady McDonough <brady.mcd.codes@gmail.com>"]
repository = "https://github.com/BradyMcd/pluralize-rs/tree/master/pluralize_derive/"
edition = "2018"

license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.16"
quote = "1.0.2"